--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
       <main>
         <img src="assets/profile.jpg" alt="Bitcoin" />
         <h2>Dewa Agustina</h2>
-        <a href=""><i class="fa-brands fa-instagram"></i>Instagram</a>
-        <a href=""><i class="fa-brands fa-linkedin"></i>Linkedin</a>
-        <a href=""><i class="fa-brands fa-medium"></i>Medium</a>
-        <a href=""><i class="fa-brands fa-square-x-twitter"></i>Twitter | X</a>
+        <a href="https://www.instagram.com/dewa_agustina_14/"><i class="fa-brands fa-instagram"></i>Instagram</a>
+        <a href="https://id.linkedin.com/in/dewa-agustina-7b9a7824a"><i class="fa-brands fa-linkedin"></i>Linkedin</a>
+        <a href="https://medium.com/@agustina200804"><i class="fa-brands fa-medium"></i>Medium</a>
+        <a href="https://x.com/gus33Ina"><i class="fa-brands fa-square-x-twitter"></i>Twitter | X</a>
       </main>
       <footer>
         <p>Copyright from @<a href="">dewa agustina</a> 2025</p>
