--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <a href="https://id.linkedin.com/in/dewa-agustina-7b9a7824a"><i class="fa-brands fa-linkedin"></i>Linkedin</a>
         <a href="https://medium.com/@agustina200804"><i class="fa-brands fa-medium"></i>Medium</a>
         <a href="https://x.com/gus33Ina"><i class="fa-brands fa-square-x-twitter"></i>Twitter | X</a>
+        <a href="https://xxxtectationxxx.github.io/CekKhodamOnline/"><i class="fa-solid fa-ghost"></i>Cek Khodam Online</a>
       </main>
       <footer>
         <p>Copyright from @<a href="">dewa agustina</a> 2025</p>
